# log

./: CMakeLists.txt  README.md  internal_log.h  log_common.h  log_handle.cpp  log_handle.h  logger.h  test.cpp
compress/: zlib_compress.cpp  zlib_compress.h  zstd_compress.h
context/: context.h  executor.cpp  thread_pool.cpp  thread_pool.h
crypt/: aes_crypt.cpp  aes_crypt.h  crypt.h
decode/: decode.h  decode_formatter.cpp  decode_formatter.h
formatter/: default_formatter.cpp  default_formatter.h  effective_formatter.cpp  effective_formatter.h  formatter.h
mmap/: mmao_linux.cpp  mmap.cpp  mmap.h  mmap_win.cpp
proto/: effective_msg.pb.cc  effective_msg.pb.h
sinks/: console_sink.cpp  console_sink.h  effective_sink.cpp  effective_sink.h  sink.h
utils/: sys_util_linux.cc
